kubernetes/ingress.tst.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdok-charting-ingress
  namespace: testing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/server-snippet: |
      gzip on;
      gzip_types application/javascript application/json font/woff2 image/svg+xml text/css text/html text/plain;
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdok-charting
                port:
                  number: 80
